Edited the about page, up to the food section

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,2 +1,15 @@
 <%- include("partials/header.ejs") %>
 <h1>About Me</h1>
+
+<div id="food-container" class="about-container">
+    <h2>Food</h2>
+    <p>
+        I love food! Eating food is great! So many different tastes, from so many different places! Each country has their own style of food, that reflects their own culture, making them even more special. 
+        Not just that, but making food is also amazing. Trying out different recipes, and getting to call it your plate. You can also add your own twist to it. So many possibilities, so much flavor!
+    </p>
+    <div id="food-pictures-container">
+        <img src="/images/about-me/pasta.jpg" alt="a bowl of seafood pasta" class="about-image">
+        <img src="/images/about-me/porterhouse-steak.jpg" alt="A plate of homemade Porterhouse Steak" class="about-image">
+        <img src="/images/about-me/salmon.jpg" alt="A plate of homemade salmon" class="about-image">
+    </div>
+</div>
